refactor: clean up
- move files into separate packages to make it easier to find related types
- rename types to improve clarity
- remove static factory methods for type construction; no added value at the moment
- reimplement tryExpect to use null object pattern
- fix Error Prone warnings